// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseFlexGrid renders: with default styles 1`] = `
<BaseFlexGrid>
  <Block
    as="div"
    data-baseweb="flex-grid"
    display="flex"
    flexWrap={true}
    overrides={Object {}}
  >
    <MockStyledComponent
      $as="div"
      $display="flex"
      $flexWrap={true}
      data-baseweb="flex-grid"
    >
      <div
        data-baseweb="flex-grid"
        styled-component="true"
      />
    </MockStyledComponent>
  </Block>
</BaseFlexGrid>
`;

exports[`BaseFlexGrid renders: with overridden styles 1`] = `
<BaseFlexGrid
  display="none"
  flexWrap={false}
  overrides={
    Object {
      "Block": Object {
        "style": Object {
          "color": "red",
        },
      },
    }
  }
>
  <Block
    as="div"
    data-baseweb="flex-grid"
    display="none"
    flexWrap={false}
    overrides={
      Object {
        "Block": Object {
          "style": Object {
            "color": "red",
          },
        },
      }
    }
  >
    <MockStyledComponent
      $as="div"
      $display="none"
      $flexWrap={false}
      $style={
        Object {
          "color": "red",
        }
      }
      data-baseweb="flex-grid"
    >
      <div
        data-baseweb="flex-grid"
        styled-component="true"
      />
    </MockStyledComponent>
  </Block>
</BaseFlexGrid>
`;

exports[`FlexGrid passes FlexGrid props to children: FlexGridItem with flexGridColumnCount 1`] = `
<FlexGrid
  flexGridColumnCount={4}
>
  <BaseFlexGrid>
    <Block
      as="div"
      data-baseweb="flex-grid"
      display="flex"
      flexWrap={true}
      overrides={Object {}}
    >
      <MockStyledComponent
        $as="div"
        $display="flex"
        $flexWrap={true}
        data-baseweb="flex-grid"
      >
        <div
          data-baseweb="flex-grid"
          styled-component="true"
        >
          <MockFlexGridItem
            flexGridColumnCount={4}
            key=".0"
          >
            <div
              flex-grid-column-count={4}
            >
              Item 1
            </div>
          </MockFlexGridItem>
          <MockFlexGridItem
            flexGridColumnCount={4}
            key=".1"
          >
            <div
              flex-grid-column-count={4}
            >
              Item 2
            </div>
          </MockFlexGridItem>
        </div>
      </MockStyledComponent>
    </Block>
  </BaseFlexGrid>
</FlexGrid>
`;

exports[`FlexGrid renders: with default styles 1`] = `
<FlexGrid>
  <BaseFlexGrid>
    <Block
      as="div"
      data-baseweb="flex-grid"
      display="flex"
      flexWrap={true}
      overrides={Object {}}
    >
      <MockStyledComponent
        $as="div"
        $display="flex"
        $flexWrap={true}
        data-baseweb="flex-grid"
      >
        <div
          data-baseweb="flex-grid"
          styled-component="true"
        />
      </MockStyledComponent>
    </Block>
  </BaseFlexGrid>
</FlexGrid>
`;

exports[`FlexGrid renders: with overridden styles 1`] = `
<FlexGrid
  overrides={
    Object {
      "Block": Object {
        "style": Object {
          "color": "red",
        },
      },
    }
  }
>
  <BaseFlexGrid
    $style={
      Object {
        "color": "red",
      }
    }
  >
    <Block
      $style={
        Object {
          "color": "red",
        }
      }
      as="div"
      data-baseweb="flex-grid"
      display="flex"
      flexWrap={true}
      overrides={Object {}}
    >
      <MockStyledComponent
        $as="div"
        $display="flex"
        $flexWrap={true}
        $style={
          Object {
            "color": "red",
          }
        }
        data-baseweb="flex-grid"
      >
        <div
          data-baseweb="flex-grid"
          styled-component="true"
        />
      </MockStyledComponent>
    </Block>
  </BaseFlexGrid>
</FlexGrid>
`;
